<resources>
    <string name="app_name">Notepad</string>
    <string name="app_logo">Notepad</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_new_account">Don\'t have an account? Sign up</string>
    <string name="label_name">Name</string>
    <string name="button_login">Login</string>
    <string name="button_new_account">Sign up</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_all_notes">All notes</string>
    <string name="hint_note">Type your note here</string>
    <string name="header_sign_up">Sign up</string>
    <string name="menu_title_logout">Logout</string>
    <string name="menu_title_all_notes">All notes</string>
    <string name="menu_title_clear_data">Clear Data</string>
    <string name="menu_title_about">About</string>
    <string name="activity_sign_up_error_create_user">An error occurred while creating user</string>
    <string name="activity_sign_up_user_created">User successfully created</string>
    <string name="activity_login_required_fields">User or password are invalid</string>
    <string name="activity_sign_up_all_fields_are_required">All fields are required</string>
    <string name="activity_form_required_text">No notes were written</string>
    <string name="activity_list_error_on_load">Could not perform operation</string>
    <string name="activity_edit_required_text">No notes entered</string>
    <string name="activity_edit_delete_success">Note removed with success</string>
    <string name="activity_edit_delete_error">An error has occurred and the note cannot be deleted"</string>
    <string name="activity_edit_update_success">Note updated with success</string>
    <string name="activity_edit_update_error">An error has occurred and the note cannot be updated"</string>
    <string name="activity_edit_error_on_load">Could not perform operation</string>
    <string name="activity_edit_delete_confirmation_message">Are you sure you want to delete this note?</string>
    <string name="activity_edit_delete_action_confim">Yes</string>
    <string name="activity_edit_delete_action_cancel">No</string>
    <string name="view_model_form_request_successfully">Note stored with success</string>
    <string name="view_model_form_update_successfully">Note updated with success</string>
    <string name="view_model_form_delete_successfully">Note removed with success</string>
    <string name="repository_notepad_error_when_get">Unable to load stored notes"</string>
    <string name="repository_notepad_error_when_update">An error has occurred and the note cannot be updated"</string>
    <string name="repository_notepad_error_when_create">An error has occurred and the note cannot be created"</string>
    <string name="repository_notepad_error_when_delete">An error has occurred and the note cannot be deleted"</string>
    <string name="loading_message">Loading…</string>
    <string name="request_permission_title">P e r m i s s i o n \n r e q u e s t</string>
    <string name="request_permission_message">We need to have internet access from your smartphone to consult and record your notes.</string>
    <string name="request_permission_button">Enable permission</string>
    <string name="about_notepad_version">Notepad 1.0</string>
    <string name="about_class_year">2019 - FIAP - 34SCJ</string>
    <string name="about_class_name">FULL STACK DEVELOPER</string>
    <string name="about_class_desc">MICROSERVICES, CLOUD E IOT</string>
    <string name="about_name_zambotti">334242 - Bruno Delphino Zambotti</string>
    <string name="about_name_zani">334151 - Marcelo Tadeu Marchesoni Zani</string>
    <string name="about_developer_by">Developed by:</string>
</resources>
