<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_login_layout_padding_top"
            android:paddingLeft="@dimen/activity_login_layout_padding_left"
            android:paddingRight="@dimen/activity_login_layout_padding_right">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/activity_login_logo_area"
            android:layout_height="@dimen/activity_login_logo_area"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_login_logo_margim_bottom"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/notepad_icon" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_login_text_margin"
                android:layout_marginBottom="@dimen/activity_login_text_margin">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_login_text_margin"
                android:layout_marginBottom="@dimen/activity_login_text_margin">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/label_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_login_button_margin"
                android:layout_marginBottom="@dimen/activity_login_button_margin"
                android:padding="@dimen/activity_login_button_padding"
                style="@style/custom_button"
                android:text="@string/button_login"/>

        <TextView android:id="@+id/btSignup"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/activity_login_signup_button_margin"
                  android:text="@string/label_new_account"
                  android:gravity="center"
                  android:textSize="@dimen/activity_login_signup_button_text_size"/>

    </LinearLayout>
</ScrollView>