<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_signup_padding"
            android:paddingLeft="@dimen/activity_signup_padding"
            android:paddingRight="@dimen/activity_signup_padding" >

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/header_sign_up"
                  android:textSize="@dimen/activity_signup_text_size"
                  android:textStyle="bold"
                  android:gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_signup_text_margin"
                android:layout_marginBottom="@dimen/activity_signup_text_margin">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_signup_text_margin"
                android:layout_marginBottom="@dimen/activity_signup_text_margin">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_signup_text_margin"
                android:layout_marginBottom="@dimen/activity_signup_text_margin">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/label_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                style="@style/custom_button"
                android:id="@+id/btCreate"
                android:layout_marginTop="@dimen/activity_signup_create_button_margin"
                android:layout_marginBottom="@dimen/activity_signup_create_button_margin"
                android:padding="@dimen/activity_signup_create_button_padding"
                android:text="@string/button_new_account"/>

    </LinearLayout>
</ScrollView>