<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/containerPermission"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background_permission"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingLeft="@dimen/permissions_padding"
              android:paddingRight="@dimen/permissions_padding">

    <TextView
            android:id="@+id/tvTitleDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/permissions_title_margin"
            android:gravity="center"
            android:padding="@dimen/permissions_title_padding"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/permissions_title_text_size"
            tools:text="@string/request_permission_title" />

    <TextView
            android:id="@+id/tvMessageDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/permissions_message_margin"
            android:gravity="center"
            android:minWidth="@dimen/permissions_message_min_width"
            android:padding="@dimen/permissions_message_padding"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/permissions_message_text_size"
            tools:text="@string/request_permission_message" />

    <Button
            android:textColor="@color/colorTextSecondary"
            style="@style/custom_button_light"
            android:id="@+id/btPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/permissions_message_button_margin"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/request_permission_button" />
</LinearLayout>