<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/activity_about_logo_width"
        android:layout_height="@dimen/activity_about_logo_height"
        android:layout_marginStart="@dimen/activity_about_logo_margin"
        android:layout_marginTop="@dimen/activity_about_logo_margin"
        android:layout_marginEnd="@dimen/activity_about_logo_margin"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notepad" />

    <TextView
        android:id="@+id/tvDevelopedBy"
        android:layout_width="@dimen/activity_about_label_width"
        android:layout_height="@dimen/activity_about_label_height"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_label_margin_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:text="@string/about_developer_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvMemberZambotti"
        android:layout_width="@dimen/activity_about_member_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_member_margin_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:text="@string/about_name_zambotti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevelopedBy" />

    <TextView
        android:id="@+id/tvMemberZani"
        android:layout_width="@dimen/activity_about_member_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_member_margin_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:text="@string/about_name_zani"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMemberZambotti" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="@dimen/activity_about_layout_app_version_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_about_layout_app_version_margin"
        android:layout_marginLeft="@dimen/activity_about_layout_app_version_margin"
        android:layout_marginEnd="@dimen/activity_about_layout_app_version_margin"
        android:layout_marginRight="@dimen/activity_about_layout_app_version_margin"
        android:gravity="center"
        android:text="@string/about_notepad_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvClassYear"
        android:layout_width="@dimen/activity_about_layout_class_year_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_layout_class_year_margin_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:gravity="center"
        android:text="@string/about_class_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <TextView
        android:id="@+id/tvClassPrefixName"
        android:layout_width="@dimen/activity_about_layout_class_prefix_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_layout_class_prefix_margin_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:gravity="center"
        android:text="@string/about_class_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClassYear" />

    <TextView
        android:id="@+id/tvClassSufixName"
        android:layout_width="@dimen/activity_about_layout_class_sufix_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_layout_class_sufix_margin_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:layout_marginBottom="@dimen/activity_about_layout_class_sufix_margin_bottom"
        android:gravity="center"
        android:text="@string/about_class_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClassPrefixName"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/activity_about_divider_width"
        android:layout_height="@dimen/activity_about_divider_height"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginLeft="@dimen/activity_about_divider1_margin_left"
        android:layout_marginTop="@dimen/activity_about_divider1_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:layout_marginRight="@dimen/activity_about_divider1_margin_right"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppVersion" />

    <View
        android:id="@+id/divider2"
        android:layout_width="@dimen/activity_about_divider_width"
        android:layout_height="@dimen/activity_about_divider_height"
        android:layout_marginStart="@dimen/activity_about_layout_margin_start"
        android:layout_marginTop="@dimen/activity_about_divider2_top"
        android:layout_marginEnd="@dimen/activity_about_layout_margin_end"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMemberZani" />
</androidx.constraintlayout.widget.ConstraintLayout>