<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.form.FormActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputNote"
        android:layout_width="@dimen/activity_edit_note_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_edit_note_margin_start"
        android:layout_marginLeft="@dimen/activity_edit_note_margin_left"
        android:layout_marginTop="@dimen/activity_edit_note_margin_top"
        android:layout_marginEnd="@dimen/activity_edit_note_margin_end"
        android:layout_marginRight="@dimen/activity_edit_note_margin_right"
        android:gravity="top"
        android:hint="@string/hint_note"
        android:inputType="text|textMultiLine"
        android:textSize="@dimen/activity_form_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEdit"
        style="@style/custom_button"
        android:layout_width="@dimen/activity_edit_button_width"
        android:layout_height="@dimen/activity_edit_button_height"
        android:layout_marginBottom="@dimen/activity_edit_button_margin_bottom_first"
        android:text="@string/button_edit"
        app:layout_constraintBottom_toTopOf="@+id/btDelete"
        app:layout_constraintEnd_toEndOf="@+id/inputNote"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputNote" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDelete"
        style="@style/custom_button_dark"
        android:layout_width="@dimen/activity_edit_button_width"
        android:layout_height="@dimen/activity_edit_button_height"
        android:layout_marginBottom="@dimen/activity_edit_button_margin_bottom_second"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>
